--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,3 +1,4 @@
+
 <div id="main-wrapper">
 
     <app-header></app-header>
@@ -39,3 +40,6 @@
     </div>
   
   </div>
+
+
+  <app-modal-imagen></app-modal-imagen>
