--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,11 @@
     width: 140px;
 }
 
+.w200{
+    width: 200px;
+}
+
+
 .avatar{
     border-radius: 100%;
     width: 30px;
@@ -49,3 +54,4 @@
 .oculto {
     display: none;
 }
+
